--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-router-hash-link": "^2.4.3",
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
